[package]
name = "unpak"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/unpak"
description = "a no-nonsense unreal pak parsing crate"
license = "MIT OR Apache-2.0"
keywords = ["modding", "parsing"]
categories = ["filesystem", "parser-implementations"]
version = "0.5.3"
edition = "2021"

# these are for specific use cases e.g a particular game without encrypted paks
[features]
default = ["encryption", "compression"]
encryption = ["dep:aes"]
compression = ["dep:flate2"]

[dependencies]
byteorder = "1.4"
strum = { version = "0.24", features = ["derive"] }
aes = { version = "0.8", optional = true }
flate2 = { version = "1.0", optional = true }
hashbrown = "0.13"
thiserror = "1.0"

[dev-dependencies]
rayon = "1.7"

[[example]]
name = "unpack"

[[example]]
name = "list"
